--- a/Alfons/components/web/dashboard/index.html
+++ b/Alfons/components/web/dashboard/index.html
@@ -1,12 +1,16 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 		<link rel="stylesheet" href="dashboard.css">
+		<link rel="stylesheet" href="../style.css">
 	</head>
 	<body>
 		<h1>Dashboard</h1>
 		
-		<table id="components-list-table"></table>
+		<div id="component-list"></div>
+
+		<h1 id="ww"></h1>
 	</body>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
