--- a/Alfons/components/web/dashboard/index.html
+++ b/Alfons/components/web/dashboard/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name=”viewport” content=”width=device-width, initial-scale=1″>
+		<link rel="apple-touch-icon" href="/iphone-icon.png">
 		<link rel="stylesheet" href="dashboard.css">
 		<link rel="stylesheet" href="../style.css">
 	</head>
